base/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: myargo
  labels:
    name: myargo
