base/http-tunnel.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: http-tunnel
spec:
  selector:
    matchLabels:
      app: http-tunnel
  serviceName: "http-tunnel"
  replicas: 1
  template:
    metadata:
      labels:
        app: http-tunnel
    spec:
      containers:
      - image: jnovack/autossh:latest
        name: http-tunnel
        volumeMounts:
        - name: http-tunnel-rsa
          mountPath: "/id_rsa"
          subPath: id_rsa
          readOnly: true
      volumes:
      - name: http-tunnel-rsa
        secret:
          secretName: http-tunnel-rsa-secret
          items:
          - key: id_rsa
            path: id_rsa
