base/kube-tunnel.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kube-tunnel
spec:
  selector:
    matchLabels:
      app: kube-tunnel
  serviceName: "kube-tunnel"
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-tunnel
    spec:
      containers:
      - image: jnovack/autossh:latest
        name: kube-tunnel
        volumeMounts:
        - name: kube-tunnel-rsa
          mountPath: "/id_rsa"
          subPath: id_rsa
          readOnly: true
      volumes:
      - name: kube-tunnel-rsa
        secret:
          secretName: http-tunnel-rsa-secret
          items:
          - key: id_rsa
            path: id_rsa
